apps/app/tests/requests/snapshots/can_login_without_verify@auth_request.snap
---
source: tests/requests/auth.rs
expression: login_response.text()
---
"{\"token\":\"TOKEN\",\"pid\":\"PID\",\"name\":\"loco\",\"email\":\"test@loco.com\",\"is_verified\":false,\"has_passkey\":false}"
